target_cpu = "arm"
cc_wrapper = "ccache"
is_cfi = false
is_official_build = true
v8_deprecation_warnings = false
v8_enable_gdbjit = false
v8_enable_i18n_support = false
v8_experimental_extra_library_files = []
v8_extra_library_files = []
v8_imminent_deprecation_warnings = false
v8_monolithic = true
v8_untrusted_code_mitigations = false
v8_use_external_startup_data = false
v8_use_snapshot = true
is_clang=false
use_sysroot=false
treat_warnings_as_errors=false
v8_monolithic=true
use_drfuzz=false
use_libfuzzer=false
v8_enable_test_features=""
use_glib=false
use_custom_libcxx=false
use_custom_libcxx_for_host=false
v8_target_cpu = "arm"